Better wrap prevention in author/date lines

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -828,7 +828,12 @@ td {
 
 .post-author-name {
     font-weight: 600;
-    color: var(--print_secondary, #757575); 
+    color: var(--print_secondary, #757575);
+    white-space: nowrap;
+}
+
+.post-date {
+  white-space: nowrap;
 }
 
 .main-content .post-subtitle {
